force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fboost__B_TriggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Boost Trigger event handler configuration. Defines actions which need to be executed to handle Trigger events.</description>
    <label>Boost Trigger Config</label>
    <pluralLabel>Boost Trigger Config</pluralLabel>
</CustomObject>