force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__BlockNonTriggerDataChanges__c.field-meta.xml
<CustomField>
    <fullName>fboost__BlockNonTriggerDataChanges__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Blocks all modifications (through Modification Context) that are not related to Trigger Context records in &apos;before insert&apos;, &apos;before update&apos; and &apos;before delete&apos; trigger handlers. The system will throw BoostException when the code will try to modify records. This type of operations should be executed in the After triggers.</description>
    <inlineHelpText>Blocks all modifications (through Modification Context) that are not related to Trigger Context records in &apos;before insert&apos;, &apos;before update&apos;, &apos;before delete&apos; trigger handlers. The system will throw BoostException when the code will try to modify records. This type of operations should be executed in the After triggers.</inlineHelpText>
    <label>Block non-trigger data changes</label>
    <type>Checkbox</type>
</CustomField>