force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__BlockTriggerDataChanges__c.field-meta.xml
<CustomField>
    <fullName>fboost__BlockTriggerDataChanges__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Blocks all modifications (through Modification Context) that are related to Trigger Context records in &apos;after insert&apos;, &apos;after update&apos;, &apos;after delete&apos; and &apos;after undelete&apos; trigger handlers. The system will throw BoostException when the code will try to modify such records. This type of operations should be executed in the Before triggers.</description>
    <inlineHelpText>Blocks all modifications (through Modification Context) that are related to Trigger Context records in &apos;after insert&apos;, &apos;after update&apos;, &apos;after delete&apos; and &apos;after undelete&apos; trigger handlers. The system will throw BoostException when the code will try to modify such records. This type of operations should be executed in the Before triggers.</inlineHelpText>
    <label>Block trigger data changes</label>
    <type>Checkbox</type>
</CustomField>