force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ObjectName__c</fullName>
    <description>Salesforce Object Type Name</description>
    <inlineHelpText>Salesforce Object Type Name</inlineHelpText>
    <label>Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>