force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__Order__c.field-meta.xml
<CustomField>
    <fullName>fboost__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Determines order of execution.</description>
    <inlineHelpText>Determines order of execution</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>