force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__RecordsSplitConfig__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordsSplitConfig__c</fullName>
    <description>Additional Records Split Strategy configuration:
for the Record Type strategy - please provided the Record Type developer name value
for the Custom strategy- please provide the class name which implements TriggerRecordsSplitStrategy interface</description>
    <inlineHelpText>Additional Records Split Strategy configuration:
for the Record Type strategy - please provided the Record Type developer name value
for the Custom strategy- please provide the class name which implements TriggerRecordsSplitStrategy interface</inlineHelpText>
    <label>Records Split Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>