force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__RecordsSplitStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordsSplitStrategy__c</fullName>
    <description>All - Trigger will process all records
Record Type - Trigger will process only records with selected Record Type
Custom - Trigger will process records based on the results of TriggerRecordsSplitStrategy interface implementation</description>
    <label>Records Split Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Record Type</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>