force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__StepFunctionsGroup3__c.field-meta.xml
<CustomField>
    <fullName>fboost__StepFunctionsGroup3__c</fullName>
    <description>Reference to Step Function Group. The trigger is executing Groups one by one to provide correct separation between functions execution. Each group is working in its own separated execution context (DataStore, Modification Context). Splitting functionalities execution in the multiple groups is highly sub-optimal - please try to run logic using only one group.</description>
    <inlineHelpText>Reference to Step Function Group. The trigger is executing Groups one by one to provide correct separation between functions execution. Each group is working in its own separated execution context (DataStore, Modification Context). Splitting functionalities execution in the multiple groups is highly sub-optimal - please try to run logic using only one group.</inlineHelpText>
    <label>Step Functions Group #3</label>
    <referenceTo>fboost__B_StepFunctionsGroupConfig__mdt</referenceTo>
    <relationshipLabel>Boost Trigger Config #3</relationshipLabel>
    <relationshipName>TriggerConfig3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>