force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>fboost__TriggerEvent__c</fullName>
    <description>Salesforce Trigger event name</description>
    <inlineHelpText>Salesforce Trigger event name</inlineHelpText>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Insert</fullName>
                <default>true</default>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>Before Update</fullName>
            </value>
            <value>
                <fullName>Before Delete</fullName>
            </value>
            <value>
                <fullName>After Insert</fullName>
            </value>
            <value>
                <fullName>After Update</fullName>
            </value>
            <value>
                <fullName>After Delete</fullName>
            </value>
            <value>
                <fullName>After Undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>