force-app/main/default/objects/fboost__B_TriggerConfig__mdt/fields/fboost__TriggerPostprocessHook__c.field-meta.xml
<CustomField>
    <fullName>fboost__TriggerPostprocessHook__c</fullName>
    <description>Defines additional logic which needs to be executed after Step Functions. Please provide the class name of the class that implements the TriggerProcessHook interface.</description>
    <inlineHelpText>Defines additional logic which needs to be executed after Step Functions. Please provide the class name of the class that implements the TriggerProcessHook interface.</inlineHelpText>
    <label>Trigger POST-process Hook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>