force-app/main/default/objects/fboost__B_TriggerConfig__mdt/validationRules/fboost__Required_RecordsSplitStrategyConfig.validationRule-meta.xml
<ValidationRule>
    <fullName>fboost__Required_RecordsSplitStrategyConfig</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(fboost__RecordsSplitStrategy__c, &apos;All&apos;) &amp;&amp; ISBLANK(fboost__RecordsSplitConfig__c)</errorConditionFormula>
    <errorDisplayField>fboost__RecordsSplitConfig__c</errorDisplayField>
    <errorMessage>Please provide the Records Split Config for the selected Records Split Strategy</errorMessage>
</ValidationRule>