force-app/main/default/objects/fboost__B_TriggerConfig__mdt/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>fboost__ObjectName__c</columns>
    <columns>fboost__TriggerEvent__c</columns>
    <columns>fboost__RecordsSplitStrategy__c</columns>
    <columns>fboost__RecordsSplitConfig__c</columns>
    <columns>fboost__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>