force-app/main/default/objects/fboost__B_TriggerConfig__mdt/listViews/fboost__AllActive.listView-meta.xml
<ListView>
    <fullName>fboost__AllActive</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>fboost__ObjectName__c</columns>
    <columns>fboost__TriggerEvent__c</columns>
    <columns>fboost__RecordsSplitStrategy__c</columns>
    <columns>fboost__RecordsSplitConfig__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>